--- a/delivery/delivery/templates/base.html
+++ b/delivery/delivery/templates/base.html
@@ -7,86 +7,85 @@
     <title>Hello Bulma!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     {% endblock head %}
-    
-    {%block  extra_css %} {% endblock extra_css %}
-</head>
+
+    {%block extra_css%} {%endblock extra_css %}
+  </head>
   <body>
-      
-
-    {% block nav %}
+      {% block nav %}
     <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="https://bulma.io">
-            <strong>CodeFoods</strong>
+      <div class="navbar-brand">
+        <a class="navbar-item" href="https://bulma.io">
+          <strong> CodeFoods</strong>
+        </a>
+    
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+    
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item" href="/">
+            Home
           </a>
-      
-          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
+    
+          <a class="navbar-item" href="{{ url_for('site.restaurants') }}">
+            Restaurantes
           </a>
-        </div>
-      
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-start">
-            <a class="navbar-item" href="/">
-              Home
-            </a>
-      
-            <a class="navbar-item" href="{{ url_for('site.restaurants') }}">
-              Restaurantes
-            </a>
 
-            <a class="navbar-item" href="{{ url_for('site.about') }}">
-              Sobre
+          <a class="navbar-item" href="{{ url_for('site.about') }}">
+            Sobre
+          </a>
+    
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              More
             </a>
-      
-            <div class="navbar-item has-dropdown is-hoverable">
-              <a class="navbar-link">
-                More
+    
+            <div class="navbar-dropdown">
+              <a class="navbar-item">
+                Pizza
               </a>
-      
-              <div class="navbar-dropdown">
-                <a class="navbar-item">
-                  Pizza
-                </a>
-                <a class="navbar-item">
-                  Pastel
-                </a>
-                <a class="navbar-item">
-                  Hamburguer
-                </a>
-                <hr class="navbar-divider">
-                <a class="navbar-item">
-                  Report an issue
-                </a>
-              </div>
-            </div>
-          </div>
-      
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <div class="buttons">
-                <a class="button is-primary">
-                  <strong>Sign up</strong>
-                </a>
-                <a class="button is-light">
-                  Log in
-                </a>
-              </div>
+              <a class="navbar-item">
+                Pastel
+              </a>
+              <a class="navbar-item">
+                hamburguer
+              </a>
+              <hr class="navbar-divider">
+              <a class="navbar-item">
+                Report an issue
+              </a>
             </div>
           </div>
         </div>
-      </nav>
-    {% endblock nav%}
+    
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              <a class="button is-primary">
+                <strong>Sign up</strong>
+              </a>
+              <a class="button is-light">
+                Log in
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    {% endblock nav %}
 
-    {% block top%}{% endblock top %}
+    {% block top %} {% endblock top %}
 
 
 
   <section class="section">
     <div class="container">
-        {% block main %}{% endblock main%}
+      
+      {% block main %} {% endblock  main %}
     </div>
   </section>
 
@@ -100,7 +99,6 @@
       </p>
     </div>
   </footer>
-
-    {% endblock footer%}
+  {% endblock footer %}
   </body>
 </html>
