--- a/delivery/delivery/templates/index.html
+++ b/delivery/delivery/templates/index.html
@@ -1,11 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema Gaça</title>
-</head>
-<body>
-    <h1>Pagina inicial do site</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% import "macros/list_item.html" as list_item%}
+
+
+
+{% block top %}
+<section class="hero is-primary">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        {{site_name}}
+      </h1>
+      <h2 class="subtitle">
+        {{site_subtittle}}
+      </h2>
+    </div>
+  </div>
+</section>
+{% endblock top %}
+
+
+{% block main %}
+<div class="columns">
+    {{ list_item.cards([1, 2, 3, 4])}}
+</div>
+{% endblock main %}
