--- a/delivery/delivery/templates/logado.html
+++ b/delivery/delivery/templates/logado.html
@@ -65,11 +65,8 @@
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-primary" href="{{url_for('site.signup')}}">
-                <strong>Sign up</strong>
-              </a>
-              <a class="button is-light" href="{{url_for('site.login')}}">
-                Log in
+              <a class="button is-light" href="{{url_for('site.index')}}">
+                Log out
               </a>
             </div>
           </div>
