implemented flask-login with sucess and improverimented front the screen login and add user

--- a/delivery/delivery/templates/login/efectlogin.html
+++ b/delivery/delivery/templates/login/efectlogin.html
@@ -12,20 +12,55 @@
 {% endblock %}
 
 {% block main %}
-<form action='{{url_for("site.login")}}' method='post' enctype='multipart/form-data'>
-    {{form.csrf_token}}
-   
-    {{form.email.label}}<br>
-    {{form.email(size=20)}}<br>
+<div class="col-md-3 col-md-offset-4">
+    <div class="container">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class="flashes">
+            {% for message in messages %}
+                <li class="alert alert-danger">{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+        {% endwith %}
+    </div>   
+    <form action='{{url_for("site.login")}}' method='post' enctype='multipart/form-data'>
+        {{form.csrf_token}}
 
-    {{form.password.label}}<br>
-    {{form.password(size=20)}}<br><br>
-    
+        <div class="form-group">
+            <label>Email</label>
+            <div class="control has-icons-left has-icons-right">
+                {{ form.email(class="input is-success", type="email", placeholder="Email") }}
+                <span class="icon is-small is-left">
+                    <i class="fas fa-envelope"></i>
+                </span>         
+                {% if form.errors.email %}
+                        {% for e in form.errors.email %}
+                            <p class="help is-danger">{{ e }}</p>
+                        {% endfor %}
+                {% endif %}
+            </div>
+        </div> 
+        
+        <div class="form-group">
+            <label>Senha</label>
+            {{ form.password(class="form-control", placeholder="Senha") }}
+            {% if form.errors.password %}
+            <div class="alert alert-danger" role="alert">
+                <ul>
+                    {% for e in form.errors.password %}
+                        <li>{{ e }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+        </div> 
 
 
-    <input type="submit" value="Conectar">
-    <input type="submit" value="Cancelar">
-</form>
+        <input class="btn btn-info" type="submit" value="Conectar">
+        <button class="btn btn-link"><a href="{{ url_for('site.index')}}">Voltar</a></button>
+    </form>
+</div>
 {% endblock %}
 
 
