--- a/delivery/delivery/templates/base.html
+++ b/delivery/delivery/templates/base.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     {% endblock head %}
 
@@ -81,13 +83,13 @@
     {% block top %} {% endblock top %}
 
 
-
   <section class="section">
     <div class="container">
       
       {% block main %} {% endblock  main %}
     </div>
   </section>
+  
 
   {% block footer %}
   <footer class="footer">
