--- a/delivery/delivery/templates/logado.html
+++ b/delivery/delivery/templates/logado.html
@@ -31,11 +31,11 @@
             Home
           </a>
     
-          <a class="navbar-item" href="{{ url_for('site.restaurants') }}">
+          <a class="navbar-item" href="{{ url_for('page.restaurants') }}">
             Restaurantes
           </a>
 
-          <a class="navbar-item" href="{{ url_for('site.about') }}">
+          <a class="navbar-item" href="{{ url_for('page.about') }}">
             Sobre
           </a>
     
@@ -65,7 +65,7 @@
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-light" href="{{url_for('site.index')}}">
+              <a class="button is-light" href="{{url_for('page.index')}}">
                 Log out
               </a>
             </div>
