--- a/delivery/delivery/templates/login/efectlogin.html
+++ b/delivery/delivery/templates/login/efectlogin.html
@@ -24,7 +24,7 @@
         {% endif %}
         {% endwith %}
     </div>   
-    <form action='{{url_for("site.login")}}' method='post' enctype='multipart/form-data'>
+    <form action='{{url_for("main.login")}}' method='post' enctype='multipart/form-data'>
         {{form.csrf_token}}
 
         <div class="form-group">
@@ -58,7 +58,7 @@
 
 
         <input class="btn btn-info" type="submit" value="Conectar">
-        <button class="btn btn-link"><a href="{{ url_for('site.index')}}">Voltar</a></button>
+        <button class="btn btn-link"><a href="{{ url_for('page.index')}}">Voltar</a></button>
     </form>
 </div>
 {% endblock %}
