--- a/delivery/delivery/templates/login/userform.html
+++ b/delivery/delivery/templates/login/userform.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block main %}
-<form action='{{url_for("site.signup")}}' method='post' enctype='multipart/form-data'>
+<form action='{{url_for("main.signup")}}' method='post' enctype='multipart/form-data'>
 <div class="col-md-3 col-md-offset-4">
     {{form.csrf_token}}
     
