view imagem picture in screen sign up

--- a/delivery/delivery/templates/base.html
+++ b/delivery/delivery/templates/base.html
@@ -102,5 +102,9 @@
     </div>
   </footer>
   {% endblock footer %}
+
+  <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
+  
   </body>
 </html>
