adicionado redutor de imagem

--- a/delivery/delivery/templates/base.html
+++ b/delivery/delivery/templates/base.html
@@ -16,7 +16,7 @@
       {% block nav %}
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
+        <a class="navbar-item" href="/">
           <strong> CodeFoods</strong>
         </a>
     
