--- a/delivery/delivery/templates/logado.html
+++ b/delivery/delivery/templates/logado.html
@@ -65,7 +65,7 @@
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-light" href="{{url_for('page.index')}}">
+              <a class="button is-light" href="{{url_for('main.logout')}}">
                 Log out
               </a>
             </div>
