--- a/delivery/delivery/templates/categoria.html
+++ b/delivery/delivery/templates/categoria.html
@@ -13,18 +13,18 @@
 {% endblock %}
 
 {% block main %}
-<form action='{{url_for("cate.register")}}' method='post' enctype='multipart/form-data'>
+<form action='{{url_for("cate.register_category")}}' method='post' enctype='multipart/cate-data'>
 <div class="col-md-3 col-md-offset-4">
     
-    {% with messages = get_flashed_messages() %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
         <ul class="flashes">
-        {% for message in messages %}
-            <li class="alert alert-warning">{{ message }}</li>
+        {% for category, message in messages %}
+            <li class="alert alert-{{category}}">{{ message }}</li>
         {% endfor %}
         </ul>
     {% endif %}
-    {% endwith %}  
+    {% endwith %} 
 
     {{cate.csrf_token}}
 
@@ -41,16 +41,6 @@
         </div>
         {% endif %}
     </div>
-
-    <div class="field">
-        <div class="control">
-          <label class="checkbox">
-            {{cate.onmenu}}
-            On-menu
-          </label>
-        </div>
-    </div>
-
 
     <div class="control">
         <input class="btn btn-info" type="submit" value="Cadastrar">
