Resolved issue decorator @login_required

--- a/delivery/delivery/templates/login/userform.html
+++ b/delivery/delivery/templates/login/userform.html
@@ -60,7 +60,7 @@
 
     <label class="label">Foto</label>         
     <figure class="thumb col-md-4">
-        <img class="img-responsive" src="{{ url_for('main.imagem', nome_arquivo='capa_padrao.jpg') }}">
+        <img class="img-responsive">
         <figcaption>
           <label class="fileContainer">
             {{form.foto(class="btn btn-link")}}
