--- a/delivery/delivery/templates/logado.html
+++ b/delivery/delivery/templates/logado.html
@@ -42,14 +42,15 @@
             </a>
     
             <div class="navbar-dropdown">
-              <a class="navbar-item" href="{{ url_for('cate.register_items') }}">
-                Items
-              </a>
+
               <a class="navbar-item" href="{{ url_for('cate.register_category') }}">
                 Categoria
               </a>
-              <a class="navbar-item">
-                hamburguer
+              <a class="navbar-item" href="{{ url_for('cate.register_store') }}">
+                Loja
+              </a>
+              <a class="navbar-item" href="{{ url_for('cate.register_items') }}">
+                Items
               </a>
               <hr class="navbar-divider">
               <a class="navbar-item">
