--- a/delivery/delivery/templates/address.html
+++ b/delivery/delivery/templates/address.html
@@ -4,52 +4,92 @@
 
 
 <section class="hero is-primary">
-<div class="hero-body">
-    <div class="container">
-        <h1>Cadastro de Categoria<h1>
+    <div class="hero-body">
+        <div class="container">
+            <h1>Cadastro de Endereço<h1>
+        </div>
     </div>
-</div>
 </section>
 {% endblock %}
 
 {% block main %}
 <form action='{{url_for("cate.register_address")}}' method='post' enctype='multipart/cate-data'>
-<div class="col-md-3 col-md-offset-4">
-    
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-        <ul class="flashes">
-        {% for category, message in messages %}
-            <li class="alert alert-{{category}}">{{ message }}</li>
-        {% endfor %}
-        </ul>
-    {% endif %}
-    {% endwith %} 
+    <div class="col-md-7 col-md-offset-4">
+        <div class="columns">
+            <div class="column">
 
-    {{address.csrf_token}}
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                <ul class="flashes">
+                    {% for category, message in messages %}
+                    <li class="alert alert-{{category}}">{{ message }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+                {% endwith %}
 
-    <div class="form-group">
-        <label>CEP: </label>
-        {{ address.name(class="form-control", placeholder="CEP") }}
-        {% if address.errors.password %}
-        <div class="alert alert-danger" role="alert">
-            <ul>
-                {% for e in cate.errors.password %}
-                    <li>{{ e }}</li>
-                {% endfor %}
-            </ul>
+                {{address.csrf_token}}
+
+                <div class="form-group">
+                    <label>CEP</label>
+                    {{ address.zip(class="form-control", type="number", placeholder="CEP") }}
+                    {% if address.errors.password %}
+                    <div class="alert alert-danger" role="alert">
+                        <ul>
+                            {% for e in cate.errors.password %}
+                            <li>{{ e }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    {% endif %}
+                </div>
+
+                <div class="form-group">
+                    <label>Estado</label>
+                    {{ address.state(class="form-control") }}
+                </div>
+
+                <div class="form-group">
+                    <label>Cidade</label>
+                    {{ address.city(class="form-control") }}
+                </div>
+                <div class="control">
+                    <input class="button is-link" type="submit" value="Cadastrar">
+                    <button class="button is-link is-light"><a href="{{ url_for('page.index')}}">Voltar</a></button>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="form-group">
+                    <label>Endereço</label>
+                    {{ address.address(class="form-control", placeholder="Endereço") }}
+                    {% if address.errors.password %}
+                    <div class="alert alert-danger" role="alert">
+                        <ul>
+                            {% for e in cate.errors.password %}
+                            <li>{{ e }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    {% endif %}
+                </div>
+
+                <div class="form-group">
+                    <label>Número da casa</label>
+                    {{ address.address(class="form-control", type="number", placeholder="N°") }}
+                    {% if address.errors.password %}
+                    <div class="alert alert-danger" role="alert">
+                        <ul>
+                            {% for e in cate.errors.password %}
+                            <li>{{ e }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    {% endif %}
+                </div>
+            </div>
+
         </div>
-        {% endif %}
     </div>
-
-    <div class="control">
-        <input class="btn btn-info" type="submit" value="Cadastrar">
-    </div>
-
-
-</div>
-</form>    
+</form>
 {% endblock %}
-
-
-
