--- a/delivery/delivery/templates/stores.html
+++ b/delivery/delivery/templates/stores.html
@@ -4,70 +4,72 @@
 
 
 <section class="hero is-primary">
-<div class="hero-body">
-    <div class="container">
-        <h1>Cadastro de Estabelecimento<h1>
+    <div class="hero-body">
+        <div class="container">
+            <h1>Cadastro de Estabelecimento<h1>
+        </div>
     </div>
-</div>
 </section>
 {% endblock %}
 
 {% block main %}
 <form action='{{url_for("cate.register_store")}}' method='post' enctype='multipart/cate-data'>
-<div class="col-md-3 col-md-offset-4">
-    
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
+    <div class="col-md-3 col-md-offset-4">
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
         <ul class="flashes">
-        {% for category, message in messages %}
+            {% for category, message in messages %}
             <li class="alert alert-{{category}}">{{ message }}</li>
-        {% endfor %}
+            {% endfor %}
         </ul>
-    {% endif %}
-    {% endwith %} 
-
-    {{store.csrf_token}}
-
-    <label>Selecione uma Categoria</label>
-    {{store.category_id(class="form-control")}}
-
-    <div class="form-group">
-        <label>Nome: </label>
-        {{ store.name_store(class="form-control", placeholder="Nome do Estabelecimento") }}
-        {% if store.errors.name %}
-        <div class="alert alert-danger" role="alert">
-            <ul>
-                {% for e in store.errors.name %}
-                    <li>{{ e }}</li>
-                {% endfor %}
-            </ul>
-        </div>
         {% endif %}
-    </div>
+        {% endwith %}
 
-    <div class="checkbox">
-        <label>Disponível </label>
-        {{ store.active(class="checkbox", type="checkbox") }}
-        {% if store.errors.available %}
-        <div class="alert alert-danger" role="alert">
-            <ul>
-                {% for e in store.errors.available %}
-                    <li>{{ e }}</li>
-                {% endfor %}
-            </ul>
+        {{store.csrf_token}}
+
+        <div class="form-group">
+            <label>Selecione uma Categoria</label>
+            {{store.category_id(class="form-control")}}
         </div>
-        {% endif %}
+
+        <div class="form-group">
+            <label>Nome </label>
+            {{ store.name_store(class="form-control", placeholder="Nome do Estabelecimento") }}
+            {% if store.errors.name %}
+            <div class="alert alert-danger" role="alert">
+                <ul>
+                    {% for e in store.errors.name %}
+                    <li>{{ e }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="form-group">
+            <div class="checkbox">
+                <label>Disponível </label>
+                {{ store.active(class="checkbox", type="checkbox") }}
+                {% if store.errors.available %}
+                <div class="alert alert-danger" role="alert">
+                    <ul>
+                        {% for e in store.errors.available %}
+                        <li>{{ e }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+
+
+        <div class="control">
+            <input class="button is-link" type="submit" value="Cadastrar">
+            <button class="button is-link is-light"><a href="{{ url_for('page.index')}}">Voltar</a></button>
+        </div>
+
+
     </div>
-
-
-    <div class="control">
-        <input class="btn btn-info" type="submit" value="Cadastrar">
-    </div>
-
-
-</div>
-</form>    
+</form>
 {% endblock %}
-
-
-
